2024-04-08: fixed body issue & default footer gap bottom page.

--- a/src/app/homepage.module.css
+++ b/src/app/homepage.module.css
@@ -1,8 +1,3 @@
-.container {
-    width: 100%;
-    height: auto;
-}
-
 .content {
     display: flex;
     gap: 50px
@@ -123,6 +118,16 @@
     position: relative;
     width: 294px;
 }
+
+.testcard .rectangle {
+    background-color: #f0f0f0;
+    box-shadow: 0px 4px 4px #00000040;
+    height: 383px;
+    left: 225px;
+    position: relative;
+    top: 100px;
+    width: 292px;
+  }
 
 .testcard .speaker {
     color: #000;
